--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#84ffff</color>
+    <color name="littleBlue">#00b8d4</color>
+    <color name="green">#cddc39</color>
+    <color name="darkgreen">#004d40</color>
 </resources>
